version/0.18/_sources/api/solver/_autosummary/settings/named_expressions.rst.txt
:orphan:

.. _named_expressions:

named_expressions
=================

.. autoclass:: ansys.fluent.core.solver.settings_232.named_expressions.named_expressions
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`named_expressions_child <named_expressions_child>`


.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

